--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/vue,node,vuejs,python,django,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=vue,node,vuejs,python,django,visualstudiocode
+# Created by https://www.gitignore.io/api/vue,node,vuejs,python,django,windows,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=vue,node,vuejs,python,django,windows,visualstudiocode
 
 ### Django ###
 *.log
@@ -288,6 +288,32 @@ sketch
 npm-debug.log
 yarn-error.log
 
-# End of https://www.gitignore.io/api/vue,node,vuejs,python,django,visualstudiocode
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
 
-venv/
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.gitignore.io/api/vue,node,vuejs,python,django,windows,visualstudiocode
+
+/venv
